--- a/app/views/public/users/my_page.html.erb
+++ b/app/views/public/users/my_page.html.erb
@@ -1,40 +1,80 @@
-<div class="row">
-    <div class="col-xs7">
-        <div class="about">
-        <h5>About <%= @user.first_name %></h5>
-        </div>
-        <div class="row">
-            <div class="col-xs-5">
-                <div class="profile">
-                    <%= form_with(model: @user, url:public_user_path(@user),method: :patch ,local: true ) do |f|%>
-                        <%= f.attachment_field :image%>
-                        <%= f.text_area :introduce %>
-                        <%= f.submit class:"btn btn-primary" %>
-                        <% f.hidden_field :first_name, value: @user.first_name %>
-                        <% f.hidden_field :last_name, value: @user.last_name %>
-                        <% f.hidden_field :first_name_kana, value: @user.first_name_kana %>
-                        <% f.hidden_field :last_name_kana, value: @user.last_name_kana %>
-                        <% f.hidden_field :telephone_number, value: @user.telephone_number %>
-                        <% f.hidden_field :postal_code, value: @user.postal_code %>
-                        <% f.hidden_field :address, value: @user.address %>
-                        <% f.hidden_field :email, value: @user.email %>
-                        <% f.hidden_field :is_deleted, value: @user.is_deleted %>
-                        <% f.hidden_field :rate, value: @user.rate %>
-                    <% end %>
+<h3>My page</h3>
+    <div class="row">
+        <div class="col-xs-1"></div>
+            <div class="col-xs-6" style="padding:0px;">
+                <div class="about" style="color:white;">
+                    <p>About <%= @user.first_name %></p>
+                    <p style="margin-left:60%;">
+                        <%= link_to edit_public_user_path(@user)do%>
+                        <i class="fas fa-user-edit"></i>
+                        <% end %>
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="profile_box">
+                        <div class="col-xs-5">
+                            <div class="profile">
+                                <%= attachment_image_tag @user,:profile_image,fallback: "noimage.jpg", style: 'border-radius: 50%; width: 100px;height: 100px;object-fit: cover;' %>
+                                <p>★★★★☆</p> 
+                                <p><%= @user.introduce %></p> 
+                            </div>
+                        </div>
+                        <div class="col-xs-7">
+                            <div class="profile_detail">
+                                <table border="1 #2F3751" style="color:border: #2F3751">
+                                    <tr>
+                                        <td>
+                                        <i class="fas fa-user"></i>
+                                            <%= @user.first_name + @user.last_name%>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <i class="fas fa-phone"></i>
+                                            <%= @user.telephone_number %>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                        <i class="fas fa-envelope"></i>
+                                            <%= @user.email %>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                        <i class="fas fa-home"></i>
+                                            <%= @user.address %>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                        <i class="fas fa-map-marker-alt"></i>
+                                            <%= @user.postal_code %>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-xs-5">
-                <div class="profile_detail">
-                
-                    <p><%= @user.first_name + @user.last_name%></p>
-                    <p><%= @user.telephone_number %></p>
-                    <p><%= @user.postal_code %></p>
-                    <p><%= @user.address %></p>
-                    <p><%= @user.email %></p>
+            <div class="col-xs-4">
+                <div class="mypage_detail">
+                    <div class="mypage_detail__parchase">
+                        <%= link_to"Your Parchase Histories",root_path %>
+                    </div>
+                    <div class="mypage_detail__favorites">
+                        <%= link_to"Your Favorite Photes",root_path %>
+                    </div>
+                    <div class="mypage_detail__orders">
+                        <div class="mypage_detail__orders_button">
+                            <%= link_to"Your Orders",root_path  %>
+                        </div>
+                        <div class="mypage_detail__orders_info">
+                            <p>You got xxx orders</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="col-xs4">
-    </div>
+            <div class="col-xs-1"></div>
 </div>
