--- a/app/views/public/photos/index.html.erb
+++ b/app/views/public/photos/index.html.erb
@@ -1,14 +1,17 @@
-<div class="user_name">
-<%#= @photo.user.first_name %>
-    <center>
-        <h3>TARO</h3>
-    </center>
-    <%= link_to"add",new_public_photo_path,style:"margin-left:560px;" %>
-</div>
-<div class="photo_index_images">
-    <% @photos.each do |photo| %>
-        <%= link_to public_photo_path(photo) do  %>
-            <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", size:'100x100' %>
+<div class="row">
+        <div class="index_photo_wrapper">
+                <h3><%= @user.first_name %></h3>
+                <%= link_to new_public_photo_path do %>
+                    <p class="fas fa-plus-circle fa-3x"></p>
+                <% end %>
+            
+        </div>
+    </div>
+    <div class="photo_index_images">
+        <% @photos.each do |photo| %>
+            <%= link_to public_photo_path(photo) do  %>
+                <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", size:'100x100' %>
+            <% end %>
         <% end %>
-    <% end %>
+    </div>
 </div>
