--- a/app/views/public/photos/show.html.erb
+++ b/app/views/public/photos/show.html.erb
@@ -1,5 +1,4 @@
 <div class="row">
-
     <div class="col-xs-4 col-xs-offset-1">
         <div class="photo_wrapper">
             <div class="photo_wrapper_image" style="height:95%; width: 100%;">
@@ -7,23 +6,57 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-4 col-xs-offset-1">
+    
+    <% if user_signed_in? && current_user.id == @photo.user_id %>
+    <%# if current_user == @photo.user_id %>
+        <div class="col-xs-4 col-xs-offset-1">
+            <div class="photo_title_caption">
+                <h4><%= @photo.title %></h4>
+                <p><%= @photo.caption %></p>
+                <h5>¥<%= @photo.price %>(税込み)</h5>
+            </div>
+            <div class="photo_price">
+                <%= link_to "Edit",edit_public_photo_path,class:"btn btn-primary"%>
+            </div>
+        </div>
+    <% else %>
+        <div class="col-xs-4 col-xs-offset-1">
+            <div class="photo_title_caption">
+                <i><%= @photo.likes.count %></i>
+                <%#= form_with(model: @photo, url: public_like_path(),local: true, method: :delete ) do |f| %>
+                    <% if current_user.already_liked?(@photo) %>
+                    <%= link_to public_photo_like_path(@photo),method: :delete do %>
+                     <i class="fas fa-heart unlike-btn"></i>
+                     <% end %>
+                    <% else %>
+                <%#= form_with(model: @photo, url:public_likes_path,local: true,method: :post) do |f| %>
+                        <%= button_to public_photo_likes_path(@photo) do %>
+                        <i class="far fa-heart like-btn" ></i>
+                        <% end %>
+        
+                <% end %>
+                
+                <h4><%= @photo.title %></h4>
+                <p><%= @photo.caption %></p>
+                <h5>¥<%= @photo.price %>(税込み)</h5>
+            </div>
+            <div class="photo_price">
+                <%= form_for(@cart_item,url:public_cart_items_path,local: true,method: :post) do |f| %>
+                    <%= f.select :amount, [*1..100], include_blank: "個数選択" %>
+                    <%= f.hidden_field :photo_id, :value => @photo.id %>
+                    <%= f.hidden_field :user_id, :value => @photo.user_id %>
+                    <%= f.submit "カートにいれる",class:"btn btn-primary btn-sm"%>
+                <% end %>
+            </div>
+        </div>
+    <% end %>
+    <div class="col-xs-2">
         <div class="photo_profile">
-            proflile
+            <%= link_to public_photos_path do %>
+                <%= attachment_image_tag @user,:profile_image,fallback: "noimage.jpg", style: 'border-radius: 50%; width: 100px;height: 100px;object-fit: cover;' %>
+                    <p><%= @user.first_name %></p>
+                    <p><%= @user.introduce %></p>
+            <% end %> 
         </div>
-        <div class="photo_title_caption">
-            <h4><%= @photo.title %></h4>
-            <p><%= @photo.caption %></p>
-            <h5>¥<%= @photo.price %>(税込み)</h5>
-        </div>
-        <div class="photo_price">
-            <%= form_for(@cart_item,url:public_cart_items_path,local: true,method: :post) do |f| %>
-                <%= f.select :amount, [*1..100], include_blank: "個数選択" %>
-                <%= f.hidden_field :photo_id, :value => @photo.id %>
-                <%= f.hidden_field :user_id, value: @photo.user_id %>
-                <%= f.submit "カートにいれる",class:"btn btn-primary btn-sm"%>
-            <% end %>
-        </div>
-    </div>
 
 </div>
