--- a/app/views/public/photos/index.html.erb
+++ b/app/views/public/photos/index.html.erb
@@ -1,17 +1,18 @@
 <div class="row">
+    <%# if user_signed_in? && current_user.id == @photos.user_id %>
         <div class="index_photo_wrapper">
-                <h3><%= @user.first_name %></h3>
-                <%= link_to new_public_photo_path do %>
-                    <p class="fas fa-plus-circle fa-3x"></p>
-                <% end %>
-            
-        </div>
-    </div>
-    <div class="photo_index_images">
-        <% @photos.each do |photo| %>
-            <%= link_to public_photo_path(photo) do  %>
-                <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", size:'100x100' %>
+            <h3><%= current_user.first_name %></h3>
+            <%= link_to new_public_photo_path do %>
+                <p class="fas fa-plus-circle fa-3x"></p>
             <% end %>
-        <% end %>
-    </div>
+        </div>
+    <%# else %>
+        <div class="photo_index_images">
+            <% @photos.each do |photo| %>
+                <%= link_to public_photo_path(photo) do  %>
+                     <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", style:'width: 33%;height:33%;padding:10px;' %>
+                <% end %>
+            <% end %>
+        </div>
+    <%# end %>
 </div>
