--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,3 +146,39 @@
 .recommend_item_each{
     width:100%;
 }
+// .cart_item {
+    
+//     width:100%;
+    
+//    &__box{
+//     width:50%;
+//     display: flex;
+//    }
+// }
+.cart_item_table tr td {
+    border-top: #000 1px solid;
+    border-bottom: #000 1px solid; 
+  
+  tr:first-child td {
+    border-top: none;
+    border-bottom: none; }
+  
+    tr:last-child td {
+    border-top: none;
+    border-bottom: none; }
+}
+tr td{
+    border:solid 1px black;
+}
+.cart_item_header{
+    background-color: lightgreen;
+}
+.cart_item_table {
+    width:100%;
+    th{
+    text-align:center;
+    }
+    td{
+        text-align:center;
+    }
+}
