--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,9 +24,9 @@ html lang="ja"
                                 = current_user.first_name + current_user.last_name
                                 | さん
                             | ようこそ、#{current_user.first_name + current_user.last_name}さん
-                            li.nav-item= link_to "マイページ", public_user_my_page_path, class: "btn btn-light nav-link"
+                            li.nav-item= link_to "マイページ", my_page_public_users_path, class: "btn btn-light nav-link"
                             li.nav-item= link_to "写真一覧",  public_photos_path, class: "btn btn-light nav-link"
-                            li.nav-item= link_to "カート", root_path, class: "btn btn-light nav-link"
+                            li.nav-item= link_to "カート", public_cart_items_path, class: "btn btn-light nav-link"
                             li.nav-item= link_to "ログアウト", destroy_user_session_path, class: "btn btn-light nav-link",method: :delete
                         - elsif admin_signed_in?
                             li= link_to "商品一覧", root_path, class: "btn btn-light"
