--- a/app/views/public/photos/index.html.erb
+++ b/app/views/public/photos/index.html.erb
@@ -1,12 +1,27 @@
 <div class="row">
-    <%# if user_signed_in? && current_user.id == @photos.user_id %>
+    <% if user_signed_in? %>
         <div class="index_photo_wrapper">
-            <h3><%= current_user.first_name %></h3>
+            <h3><%= @user.first_name %></h3>
             <%= link_to new_public_photo_path do %>
                 <p class="fas fa-plus-circle fa-3x"></p>
             <% end %>
+            <%#@user ||= current_user %>
+            <% unless current_user?(@user) %>
+                <div id="follow_form">
+                    <% if current_user.following?(@user) %>
+                        <%#= form_for(current_user.following_relationships.find_by(following_id: @user.id), public_relationship_path(@user),method: :delete) do |f| %>
+                        <%= form_for(current_user.following_relationships.find_by(following_id: @user.id), html: { method: :delete }) do |f| %>
+                            <%= f.submit "Unfollow", class: "btn btn-large follow-btn" %>
+                        <% end %>
+                    <% else %>
+                        <%= form_for(current_user.following_relationships.build(following_id: @user.id), url: public_relationships_path)do |f| %>
+                            <div><%= f.hidden_field :following_id %></div>
+                            <%= f.submit "Follow",class: "btn btn-large btn-primary follow-btn" %>
+                        <% end %>
+                    <% end %>
+                </div>
+            <% end %>
         </div>
-    <%# else %>
         <div class="photo_index_images">
             <% @photos.each do |photo| %>
                 <%= link_to public_photo_path(photo) do  %>
@@ -14,5 +29,5 @@
                 <% end %>
             <% end %>
         </div>
-    <%# end %>
+    <% end %>
 </div>
