--- a/app/views/public/photos/show.html.erb
+++ b/app/views/public/photos/show.html.erb
@@ -32,6 +32,21 @@
     <% else %>
         <div class="col-xs-4 col-xs-offset-1">
             <div class="photo_title_caption">
+               <%# @user ||= current_user %>
+    <%# unless current_user?(@user) %>
+         <div id="follow_form">
+            <%# if current_user.following?(@user) %>
+                <%#= form_for(current_user.following_relationships.find_by(following_id: @user.id), html: { method: :delete }) do |f| %>
+                    <%#= f.submit "Unfollow",following_public_user_path(@user) ,class: "btn btn-large follow-btn" %>
+                <%# end %>
+            <%# else %>
+                <%#= form_for(current_user.following_relationships.build(following_id: @user.id)) do |f| %>
+                    <div><%#= f.hidden_field :following_id %></div>
+                    <%#= f.submit "Follow",following_public_user_path(@user), class: "btn btn-large btn-primary follow-btn" %>
+                <%# end %>
+            <%# end %>
+        </div>
+    <%# end %>
                 <i><%= @photo.likes.count %></i>
                     <% if current_user.already_liked?(@photo) %>
                         <%= link_to public_photo_like_path(@photo),method: :delete do %>
@@ -47,10 +62,9 @@
                 <h5>¥<%= @photo.price %>(税込み)</h5>
             </div>
             <div class="photo_price">
-                <%= form_for(@cart_item,url:public_cart_items_path,local: true,method: :post) do |f| %>
+                <%= form_with(model: @cart_item,url:public_cart_items_path, local: true, method: :post) do |f| %>
                     <%= f.select :amount, [*1..100], include_blank: "個数選択" %>
                     <%= f.hidden_field :photo_id, :value => @photo.id %>
-                    <%= f.hidden_field :user_id, :value => @photo.user_id %>
                     <%= f.submit "カートにいれる",class:"btn btn-primary btn-sm"%>
                 <% end %>
             </div>
@@ -58,10 +72,11 @@
     <% end %>
     <div class="col-xs-2">
         <div class="photo_profile">
-            <%= link_to public_photos_path do %>
+            <%= link_to public_photos_path(user_id: @user.id) do %>
+                <%# <%= hidden_field_tag :user_id, @user.id %>
                 <%= attachment_image_tag @user,:profile_image,fallback: "noimage.jpg", style: 'border-radius: 50%; width: 100px;height: 100px;object-fit: cover;' %>
                     <p><%= @user.first_name %></p>
                     <p><%= @user.introduce %></p>
-            <% end %> 
+            <% end %>
         </div>
 </div>
