--- a/app/views/public/users/my_page.html.erb
+++ b/app/views/public/users/my_page.html.erb
@@ -15,6 +15,8 @@
                         <div class="col-xs-5">
                             <div class="profile">
                                 <%= attachment_image_tag @user,:profile_image,fallback: "noimage.jpg", style: 'border-radius: 50%; width: 100px;height: 100px;object-fit: cover;' %>
+                                <%= render 'follow_form' %>
+　　　                              <%= render 'stats' %>
                                 <p>★★★★☆</p> 
                                 <p><%= @user.introduce %></p> 
                             </div>
@@ -61,10 +63,10 @@
             <div class="col-xs-4">
                 <div class="mypage_detail">
                     <div class="mypage_detail__parchase">
-                        <%= link_to"Your Parchase Histories",root_path %>
+                        <%= link_to"Your Purchase Histories",public_photo_likes_path(@user) %>
                     </div>
                     <div class="mypage_detail__favorites">
-                        <%= link_to"Your Favorite Photes",root_path %>
+                        <%= link_to"Your Favorite Photos",public_photo_likes_path(@user) %>
                     </div>
                     <div class="mypage_detail__orders">
                         <div class="mypage_detail__orders_button">
