--- a/app/views/public/users/my_page.html.erb
+++ b/app/views/public/users/my_page.html.erb
@@ -3,7 +3,7 @@
         <div class="col-xs-1"></div>
             <div class="col-xs-6" style="padding:0px;">
                 <div class="about" style="color:white;">
-                    <p>About <%= @user.first_name %></p>
+                    <p>About <%= @user.first_name + @user.last_name %></p>
                     <p style="margin-left:60%;">
                         <%= link_to edit_public_user_path(@user)do%>
                         <i class="fas fa-user-edit"></i>
@@ -27,7 +27,7 @@
                                     <tr>
                                         <td>
                                         <i class="fas fa-user"></i>
-                                            <%= @user.first_name + @user.last_name%>
+                                            <%= @user.nickname%>
                                         </td>
                                     </tr>
                                     <tr>
@@ -63,7 +63,7 @@
             <div class="col-xs-4">
                 <div class="mypage_detail">
                     <div class="mypage_detail__parchase">
-                        <%= link_to"Your Purchase Histories",public_photo_likes_path(@user) %>
+                        <%= link_to"Your Purchase Histories",public_orders_path %>
                     </div>
                     <div class="mypage_detail__favorites">
                         <%= link_to"Your Favorite Photos",public_photo_likes_path(@user) %>
