--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,6 +1,6 @@
     <h3>注文情報入力</h3>
    <div class="order_info">
-    <%= form_with(model: @order,url:confirm_public_orders_path,local: true, method: :get) do |f| %>
+    <%= form_with(model: @order,url:confirm_public_orders_path, method: :get,local: true) do |f| %>
             <h2>支払方法</h2>
             <div class="payment">
                 <%= f.radio_button :payment_method, :"クレジット" %>
