--- a/app/views/public/photos/hashtag.html.erb
+++ b/app/views/public/photos/hashtag.html.erb
@@ -1,4 +1,44 @@
-<div class="row">
+<%= @hashtag.hashname %>
+        <div class="index_photo_wrapper">
+   
+            <%#@user ||= current_user %>
+            
+        </div>
+        <div class="photo_index_images">
+            <% @hashtag_photos.each do |hashtag_photo| %>
+                <%= link_to public_photo_path(hashtag_photo.photo) do  %>
+                     <%= attachment_image_tag hashtag_photo.photo,:image,fallback: "noimage.jpg", style:'width: 33%;height:33%;padding:10px;' %>
+                <% end %>
+            <% end %>
+        </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <% if params[:name] == nil %>
 
         <% else %>
